# Zotero-MCP-Server

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python_ci.yml
src/zotero_mcp_server/: log.py  parser.py  pyzotero_wrapper.py  zotero_mcp_server.py
tests/: test_pyzotero_items.json  test_zotero_mcp_server.py
tests/tests_data/: patch_query_libary_response_limit-10000_query-Intelligence.json  patch_query_libary_response_limit-10000_query-OWASP.json  patch_query_libary_response_limit-10000_query-Rindfleischetikettierungsüberwachungsaufgabenübertragungsgesetz.json  patch_query_library_response_limit-10000_query-04 Bridge the gap from current state to ideal state.json  patch_query_library_response_limit-10000_query-Snyk.json  test_data_retrieve_zotero_items_content.json
