[project]
name = "zotero-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mcp>=1.6.0",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "pyzotero>=1.6.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    'ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning',
    'ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning',
]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "types-beautifulsoup4>=4.12.0.20250204",
]
